tests/snapshots/tui_recover__recover_dialog.snap
---
source: tests/tui_recover.rs
expression: "harness.render(|frame|\n{\n    views::commit_list::render(&mut app, frame);\n    views::recover::render_recover(&mut app, frame);\n})"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "SHA        Title                                                                ",
        "abc123de   Refactor parser module                                               ",
        "def456gh   Add feature X                                                        ",
        "                                                                                ",
        "                                                                                ",
        "         ┌ Recover ───────────────────────────────────────────────────┐         ",
        "         │                                                            │         ",
        "         │ Interrupted drop found                                     │         ",
        "         │                                                            │         ",
        "         │ git-tailor was closed while a drop was in progress. The    │         ",
        "         │ working tree still holds the unresolved changes.           │         ",
        "         │                                                            │         ",
        "         │ Conflicting files:                                         │         ",
        "         │ src/parser/mod.rs                                          │         ",
        "         │                                                            │         ",
        "         │                  Enter Resume   Esc Abort                  │         ",
        "         │                                                            │         ",
        "         └────────────────────────────────────────────────────────────┘         ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " abc123def456 2/2                                            Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 33, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 5, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 6, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 6, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 7, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 7, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 33, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 7, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 8, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 8, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 9, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 9, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 10, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 10, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 11, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 11, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 12, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 12, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 29, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 12, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 13, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 13, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 14, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 14, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 15, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 15, fg: Green, bg: Black, underline: Reset, modifier: NONE,
        x: 34, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 43, y: 15, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 47, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 15, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 16, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 16, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 17, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 61, y: 23, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 79, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
